--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
-    "vite": "^3.0.7"
+    "vite": "^3.0.7",
+    "vite-plugin-windicss": "^1.8.7",
+    "windicss": "^3.5.6"
   }
 }
